force-app/main/default/objects/Beat_Stop__c/Beat_Stop__c.object-meta.xml
<CustomObject>
    <label>Beat Stop</label>
    <pluralLabel>Beat Stops</pluralLabel>
    <description>Beat Stop</description>
    <nameField>
        <label>Beat Stop Name</label>
        <type>AutoNumber</type>
        <displayFormat>STP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>