force-app/main/default/objects/Beat_Stop__c/fields/Planned_Window__c.field-meta.xml
<CustomField>
    <fullName>Planned_Window__c</fullName>
    <label>Planned Window</label>
    <type>Text</type>
    <length>20</length>
    <description>Planned Window</description>
</CustomField>