force-app/main/default/objects/Beat_Stop__c/fields/Sales_Beat__c.field-meta.xml
<CustomField>
    <fullName>Sales_Beat__c</fullName>
    <label>Sales Beat</label>
    <type>MasterDetail</type>
    <referenceTo>Sales_Beat__c</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Sales Beat</description>
</CustomField>